<resources>
    <string name="app_name">Store Management</string>
    <string name="lb_title">Customer and Product</string>
    <string name="lb_customerList">Customer List</string>
    <string name="lb_productList">Product List</string>
    <string name="lb_customerImage">customer_image</string>
    <string name="lb_productImage">productImage</string>
    <string name="lb_add">add</string>
    <string name="lb_sampleName">Maung Maung</string>
    <string name="lb_samplePhoneNo">09123456789</string>
    <string name="lb_sampleProductName">Mouse</string>
    <string name="lb_samplePrice">K 32,000</string>
    <string name="lb_addCustomer">Add Customer</string>
    <string name="lb_customerName">Customer Name</string>
    <string name="lb_phoneNo">Phone No</string>
    <string name="lb_addProduct">Add Product</string>
    <string name="lb_productName">Product Name</string>
    <string name="lb_price">Price</string>
    <string name="lb_chooseProduct">Choose Product</string>
    <string name="lb_logo_image">logo image</string>
    <string name="lb_userName">User Name</string>
</resources>