<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            style="@style/text.title"
            android:id="@+id/tvTitle"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/size_60"
            android:text="@string/lb_addCustomer" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputBoxStyle"
        android:id="@+id/containerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:hint="@string/lb_customerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_68"
            android:imeOptions="actionNext"
            android:background="@color/bg_icon"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputBoxStyle"
        android:id="@+id/containerPhoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24"
        android:hint="@string/lb_phoneNo"
        app:layout_constraintEnd_toEndOf="@id/containerName"
        app:layout_constraintStart_toStartOf="@id/containerName"
        app:layout_constraintTop_toBottomOf="@id/containerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_68"
            android:imeOptions="actionNext"
            android:background="@color/bg_icon"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/text.title"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_68"
        android:layout_marginTop="@dimen/size_24"
        android:backgroundTint="@color/add_btn_color"
        android:text="@string/lb_addCustomer"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/containerPhoneNo"
        app:layout_constraintStart_toStartOf="@id/containerName"
        app:layout_constraintEnd_toEndOf="@id/containerName" />

</androidx.constraintlayout.widget.ConstraintLayout>